# gtfs-daytype

./: .gitignore  .isort.cfg  .pydocstyle  CITATION.cff  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
docs/: paper_validation_data.rst
examples/: calendar_table.py  compare_daytypes.py  extract_daytypes.py  inspect_route_patterns.py
scripts/: validate_paper_feeds.py
src/gtfs_daytype/: __init__.py  calendar.py  cli.py  extract.py  io.py  metrics.py  models.py  patterns.py  time.py
tests/: test_extract.py  test_metrics.py
