[project]
name = "gtfs-daytype"
version = "0.1.0"
description = "Extract recurring transit DayTypes and compare GTFS schedules."
readme = "README.rst"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Evgeny Makarov" }
]
keywords = ["GTFS", "public transit", "daytype", "timetable", "schedule similarity"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
]
dependencies = [
  'h3>=4.0.0',
]

[project.urls]
Homepage = 'https://github.com/emakarov/gtfs-daytype'
Repository = 'https://github.com/emakarov/gtfs-daytype'
Issues = 'https://github.com/emakarov/gtfs-daytype/issues'

[project.optional-dependencies]
dev = [
  'flake8>=7.0.0',
  'isort>=5.13.0',
  'pydocstyle>=6.3.0',
  'pytest>=8.0.0',
]

[project.scripts]
gtfs-daytype = 'gtfs_daytype.cli:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
